--- a/VideoVerhuur/Views/Video/GenreFilms.cshtml
+++ b/VideoVerhuur/Views/Video/GenreFilms.cshtml
@@ -8,6 +8,8 @@
 <p>Er zijn momenteel geen reserveringen.</p>
 }
 else {
+	<h5>Welkom,  @ViewBag.Klant @ViewBag.Naam  </h5>
+	<h4>@Model.FirstOrDefault().Genre.GenreNaam</h4>
 <table class="table table-bordered">
 	<thead> 
 		<tr>
