--- a/VideoVerhuur/Views/Video/Genres.cshtml
+++ b/VideoVerhuur/Views/Video/Genres.cshtml
@@ -3,9 +3,9 @@
 	ViewData["Title"] = "Genres";
 }
 
-<h2>Genres</h2>
-<h3>Welkom @ViewBag.Klant @ViewBag.Naam  </h3>
-<h4>Klik op het gewenste genre</h4>
+<h3>Genres</h3>
+<h4>Welkom,  @ViewBag.Klant @ViewBag.Naam  </h4>
+<div class="klik"><h5>Klik op het gewenste genre</h5></div>
 @if (Model == null || Model.Count() == 0)
 {
 	<h3>Er zijn geen Genres gevonden</h3>
@@ -17,7 +17,7 @@ else
 			<tr>
 				@foreach (var Genre in Model)
 				{
-					<td><a asp-action="GenreFilms" asp-route-id="@Genre.GenreId">@Genre.GenreNaam</a></td>
+					<td><a asp-action="GenreFilms" asp-route-id="@Genre.GenreId"/>@Genre.GenreNaam</td>
 
 				}
 			</tr>
