--- a/VideoVerhuur/Views/Video/FilmVerhuren.cshtml
+++ b/VideoVerhuur/Views/Video/FilmVerhuren.cshtml
@@ -25,8 +25,8 @@
 		</tbody>
 	</table>
 
-<a class="btn btn-lg btn-warning" asp-action="GenreFilms" asp-route-id="@Model.WinkelFilmsVoorKlant.Last().GenreId">
-	Verder winkelen</a>
+@*<a class="btn btn-lg btn-warning" asp-action="GenreFilms" asp-route-id="@Model.WinkelFilmsVoorKlant.Last().GenreId">
+	Verder winkelen</a>*@
 
 <a class="btn btn-lg btn-warning afrekenen" asp-action="Afrekenen">
 Afrekenen</a>
