--- a/VideoVerhuur/Views/Video/FilmVerhuren.cshtml
+++ b/VideoVerhuur/Views/Video/FilmVerhuren.cshtml
@@ -15,7 +15,7 @@
 					<td>@film.Titel</td>
 					<td>@film.Prijs</td>
 					<td>
-						<a asp-action="VerwijderFilm" asp-route-id="@film.FilmId">
+					<a asp-action="verwijder" asp-route-id="@film.FilmId">
 							<img class="icon" src="~/images/delete.png" asp-append-version="true" />
 						</a>
 					</td>
