--- a/VideoVerhuur/Views/Video/Afrekenen.cshtml
+++ b/VideoVerhuur/Views/Video/Afrekenen.cshtml
@@ -3,6 +3,7 @@
 		ViewData["Title"] = "Afrekenen";
 }
 <h3>Afrekenen</h3>
+@if(Model.Count() > 0){
 <table class="table table-bordered">
 	<thead>
 		<tr>
@@ -31,3 +32,6 @@
 <h5>@ViewBag.Naam <br /></h5>
 <h5>@ViewBag.Adres <br/></h5>
 <h5>@ViewBag.Gemeente <br /></h5>
+}else{
+	<h3>@ViewBag.ErrorMessage</h3>
+}
