--- a/VideoVerhuur/Views/Video/Afrekenen.cshtml
+++ b/VideoVerhuur/Views/Video/Afrekenen.cshtml
@@ -4,6 +4,8 @@
 }
 <h3>Afrekenen</h3>
 @if(Model.Count() > 0){
+
+
 <table class="table table-bordered">
 	<thead>
 		<tr>
@@ -35,3 +37,5 @@
 }else{
 	<h3>@ViewBag.ErrorMessage</h3>
 }
+
+<a class="btn btn-lg btn-warning" asp-action="UitLogin">Uitlogin</a>
